SNRGY-1211 export-details: fix table spacing

--- a/src/app/modules/data/export/export-details/export-details.component.css
+++ b/src/app/modules/data/export/export-details/export-details.component.css
@@ -80,3 +80,7 @@ mat-grid-list {
 .fill-remaining-space {
     flex: 1 1 auto;
 }
+
+.mat-cell {
+    padding: 0 8px;
+}
